# airsoft-suitcase

./: .gitignore  CLAUDE.md  pyproject.toml  setup.sh
.claude/: settings.local.json
config/: config.csv
scripts/: run_game.py  run_keypad_adapter.py  run_web_preview.py
src/airsoft_suitcase/: __init__.py  console_main.py  game_utils.py  main.py  theme.py  web_preview.py
src/airsoft_suitcase/hardware/: __init__.py  keypad_adapter.py  led.py  nfc_reader.py
src/airsoft_suitcase/modes/: __init__.py  bomb_mode.py  bunker_mode.py  flag_mode.py  led_utils.py
tests/: test_game_utils.py  test_led.py
web/: app.css  app.js  index.html
